@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <!--
- Copyright (C) 2007 Apple Inc.  All rights reserved.
+ Copyright (C) 2007 Apple Inc. All rights reserved.
 
  Redistribution and use in source and binary forms, with or without
  modification, are permitted provided that the following conditions
@@ -30,9 +31,13 @@
 
 <style>
 dt { font-weight: bold; }
+dd { margin-bottom: 1em; margin-top: 0.5em }
 </style>
+
 </head>
+
 <body>
+
 <h2>SunSpider JavaScript Benchmark</h2>
 
 <p>This is SunSpider, a JavaScript benchmark. This benchmark tests the
@@ -70,5 +75,7 @@ singificant.</dd>
 </dl>
 
 <a href="sunspider-driver.html">Start Now!</a>
+
 </body>
+
 </html>
