@@ -1,3 +1,7 @@
+2007-11-04  Darin Adler  <darin@apple.com>
+
+        * hosted/sunspider.html: Tweaked formatting a bit.
+
 2007-11-03  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
